2001-02-09  Ion Badulescu  <ionut@moisil.dev.hydraweb.com>

	* AUTHORS: added Ahmon Dancy <dancy@franz.com>

	* (all): added Darwin/Rhapsody/Apple OS X support from Ahmon Dancy

	* aux/macros/mount_headers.m4: moved all the C code into a
	separate file, include/mount_headers.h; the effect is that
	configure goes down in size by a factor of 2.5!

	* include/mount_headers.h: new file, with C code from
	aux/macros/mount_headers.m4

2001-02-01  Ion Badulescu  <ionut@moisil.dev.hydraweb.com>

	* conf/mount/mount_linux.c: made linux_nfs_error() more robust.

2001-02-01  Erez Zadok  <ezk@shekel.mcl.cs.columbia.edu>

	* released snapshot am-utils-6.1a2

	* updated ltmain.sh and ltconfig from latest stable version of
	libtool-1.3.5

2001-02-01  Ion Badulescu  <ionut@moisil.dev.hydraweb.com>

	* conf/nfs_prot/nfs_prot_linux.h (nfs_error): moved the definition
	of nfs_error here, from mount_linux.c, so that it can actually be
	used.

	* conf/mount/mount_linux.c: added unused errno 41 to the
	nfs_errormap array, lest the following errno's get shifted up by
	one!

Sat Jan 13 00:04:38 2001  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>

	* amd/amd.h (autofs_lookuppn): Fixup whitespace.
	* amd/amfs_auto.c (amfs_auto_bgmount): Likewise.
	* amd/amfs_error.c: (amfs_error_match): Likewise.
	* amd/amfs_host.c (fetch_fhandle): Fixup whitespace.  Remove
	unnecessary temporary variable.
	* amd/info_file.c (read_line): Likewise.
	(search_or_reload_file): Likewise.
	* amd/info_ldap.c (get_ldap_timestamp): Likewise.
	* amd/map.c (get_root_ap): Likewise.
	* amd/nfs_prot_svc.c: Likewise.
	* amd/ops_TEMPLATE.c (foofs_match, foofs_lookuppn,
	foofs_readlink, foofs_ffserver): Likewise. 
	* amd/ops_autofs.c (autofs_bgmount): Likewise.
	* amd/ops_lofs.c (lofs_match): Likewise.
	* amd/ops_nfs.c (got_nfs_fh): Fixup whitespace.
	* amd/ops_xfs.c (xfs_match): Likewise.
	* amd/srvr_amfs_auto.c (srvrlog): Line break.
	* amd/srvr_nfs.c (got_portmap, call_portmap, nfs_pinged,
	nfs_srvr_port): Fixup whitespace.