@@ -256,7 +256,8 @@ EXTRA_DIST_INCLUDE =		\
 	include/am_xdr_func.h	\
 	include/am_defs.h	\
 	include/amq_defs.h	\
-	include/mount_headers.h
+	include/mount_headers1.h \
+	include/mount_headers2.h
 
 EXTRA_DIST =			\
 	$(EXTRA_DIST_AUX)	\
